mpd/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mpd
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mpd
    spec:
      containers:
      - name: mpd
        # image: jess/mpd
        image: vimagick/mpd
        # lifecycle:
        #   postStart:
        #     exec:
        #       command:
        #       - /bin/bash
        #       - -xc
        #       - >
        #         apk -U add mpd;
        command:
        - "/bin/sh"
        - "-xc"
        - >
          apk -U add mpd;
          mpd --stdout --no-daemon --verbose;
        ports:
        - name: db
          containerPort: 6600
        - name: stream
          containerPort: 8080
        volumeMounts:
        - name: mpd
          mountPath: /var/lib/mpd/Music
          subPath: Music
        - name: mpd
          mountPath: /var/lib/mpd
          subPath: docker/mpd
        - name: current-config
          mountPath: /etc/mpd.conf
          subPath: mpd.conf
      volumes:
      - name: mpd
        glusterfs:
          endpoints: glusterfs-cluster
          path: data
          readOnly: false
      - name: current-config
        configMap:
          name: config.general.mpd
