mpd/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mpd
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: music.leangeder.eu
    http:
      paths:
      - backend:
          serviceName: mpd-stream
          servicePort: stream
